Removed temp boundaries script

--- a/src/index.html
+++ b/src/index.html
@@ -1583,7 +1583,7 @@
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-  <script src="https://adieyal.github.io/wazi-script/map.js"></script>
+  <!--<script src="https://adieyal.github.io/wazi-script/map.js"></script>-->
   <script src="https://bevacqua.github.io/dragula/dist/dragula.js"></script>
   <script>
       var drake = dragula({
