Updated index.html and profile code

--- a/src/boilerplate/components.html
+++ b/src/boilerplate/components.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Dec 13 2019 11:32:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jan 17 2020 05:59:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ddf841128a74710ed7625e0" data-wf-site="5ddce16f2111933b6c1205a5">
 <head>
   <meta charset="utf-8">
@@ -45,6 +45,12 @@
   <link href="../images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
+  <div>
+    <div class="content__map_tooltip">
+      <div class="text-block">City of Cape Town Ward 23</div>
+      <div class="map-tooltip__notch"></div>
+    </div>
+  </div>
   <div class="grid__module_section">
     <div class="grid__module_container">
       <div class="grid__module_row">
