--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jan 17 2020 05:59:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jan 18 2020 04:56:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ddce16f21119352361205a8" data-wf-site="5ddce16f2111933b6c1205a5">
 <head>
   <meta charset="utf-8">
@@ -961,7 +961,7 @@
                       </div>
                       <div class="sub-indicator__chart_area">
                         <div class="sub-indicator__chart_body">
-                          <div class="sub-indicator__chart sub-indicator__chart--bar"><img src="images/test-chart-green.svg" alt="" class="image-3"></div>
+                          <div class="indicator__chart bar"><img src="images/test-chart-green.svg" alt="" class="image-3"></div>
                         </div>
                         <div class="sub-indicator__chart_footer">
                           <div class="indicator__chart_footnote">
@@ -1031,7 +1031,7 @@
                       </div>
                       <div class="sub-indicator__chart_area">
                         <div class="sub-indicator__chart_body">
-                          <div class="sub-indicator__chart--pie"><img src="images/Asset-3.svg" alt=""></div>
+                          <div class="indicator__chart pie"><img src="images/Asset-3.svg" alt=""></div>
                         </div>
                         <div class="sub-indicator__chart_footer">
                           <div class="indicator__chart_footnote">
@@ -1143,7 +1143,7 @@
                       </div>
                       <div class="sub-indicator__chart_area">
                         <div class="sub-indicator__chart_body">
-                          <div class="sub-indicator__chart--bar"><img src="images/test-chart-green.svg" alt="" class="image-3"></div>
+                          <div class="indicator__chart bar"><img src="images/test-chart-green.svg" alt="" class="image-3"></div>
                         </div>
                         <div class="sub-indicator__chart_footer">
                           <div class="indicator__chart_footnote">
@@ -1213,7 +1213,7 @@
                       </div>
                       <div class="sub-indicator__chart_area">
                         <div class="sub-indicator__chart_body">
-                          <div class="sub-indicator__chart--pie"><img src="images/Asset-3.svg" alt=""></div>
+                          <div class="indicator__chart pie"><img src="images/Asset-3.svg" alt=""></div>
                         </div>
                         <div class="sub-indicator__chart_footer">
                           <div class="indicator__chart_footnote">
@@ -1325,7 +1325,7 @@
                       </div>
                       <div class="sub-indicator__chart_area">
                         <div class="sub-indicator__chart_body">
-                          <div class="sub-indicator__chart--bar"><img src="images/test-chart-green.svg" alt="" class="image-3"></div>
+                          <div class="indicator__chart bar"><img src="images/test-chart-green.svg" alt="" class="image-3"></div>
                         </div>
                         <div class="sub-indicator__chart_footer">
                           <div class="indicator__chart_footnote">
@@ -1395,7 +1395,7 @@
                       </div>
                       <div class="sub-indicator__chart_area">
                         <div class="sub-indicator__chart_body">
-                          <div class="sub-indicator__chart--pie"><img src="images/Asset-3.svg" alt=""></div>
+                          <div class="indicator__chart pie"><img src="images/Asset-3.svg" alt=""></div>
                         </div>
                         <div class="sub-indicator__chart_footer">
                           <div class="indicator__chart_footnote">
@@ -1440,7 +1440,7 @@
               </div>
             </div>
           </div>
-          <div class="content__map_loading">
+          <div class="content__map_loading hidden">
             <div data-w-id="f6b27fe1-00fa-93b5-7f3f-eeea673cd494" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e180bb9b827fa6d2953dcf7_lottieflow-loading-08-ffffff-easey.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="2.125" data-duration="1.4" class="lottie-animation"></div>
           </div>
           <div style="opacity:1;display:flex" class="content__map_current-display">
@@ -1502,39 +1502,13 @@
                           <a href="#" class="point-data__h2 active-1 w-inline-block">
                             <div class="point-data__h2_tree-line-h"></div>
                             <div class="truncate">High schools</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="8605b42d-a90a-e7d8-c0c7-0958a98793fb" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
-                            <div class="point-data__h2_bg _1"></div>
-                          </a>
-                        </div>
-                        <div class="point-data__h2_wrapper">
-                          <a href="#" class="point-data__h2 w-inline-block">
-                            <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Primary schools</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="624f636f-7d25-21e0-28e8-f1ebd480eea5" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="1.5" class="icon-lottie--checkbox"></div>
-                            </div>
-                            <div class="point-data__h2_bg _1"></div>
-                          </a>
-                        </div>
-                        <div class="point-data__h2_wrapper">
-                          <a href="#" class="point-data__h2 w-inline-block">
-                            <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Technical college</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="e2397839-0383-715f-bfd7-ed56cc5c1d5f" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
                             <div class="point-data__h2_bg _1"></div>
                           </a>
                         </div>
                         <div class="point-data__h2_wrapper">
                           <a href="#" class="point-data__h2 last w-inline-block">
                             <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Universities</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="8e38b734-a5d0-7567-408f-c7c1143fd3f0" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
+                            <div class="truncate">Primary schools</div>
                             <div class="point-data__h2_bg _1"></div>
                           </a>
                         </div>
@@ -1568,42 +1542,13 @@
                           <a href="#" class="point-data__h2 active-2 w-inline-block">
                             <div class="point-data__h2_tree-line-h"></div>
                             <div class="truncate">Clinics</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="97740a43-9bdb-fe86-6a83-d9da16732a96" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
-                            <div class="point-data__h2_bg _2"></div>
-                          </a>
-                        </div>
-                        <div class="point-data__h2_wrapper">
-                          <a href="#" class="point-data__h2 w-inline-block">
-                            <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Dispenseries</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="97740a43-9bdb-fe86-6a83-d9da16732a9e" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="1.5" class="icon-lottie--checkbox"></div>
-                            </div>
-                            <div class="point-data__h2_bg"></div>
-                            <div class="point-data__h2_bg _2"></div>
-                          </a>
-                        </div>
-                        <div class="point-data__h2_wrapper">
-                          <a href="#" class="point-data__h2 w-inline-block">
-                            <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Pharmacies</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="97740a43-9bdb-fe86-6a83-d9da16732aa6" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
-                            <div class="point-data__h2_bg"></div>
                             <div class="point-data__h2_bg _2"></div>
                           </a>
                         </div>
                         <div class="point-data__h2_wrapper">
                           <a href="#" class="point-data__h2 last w-inline-block">
                             <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Hospitals</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="97740a43-9bdb-fe86-6a83-d9da16732aae" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
-                            <div class="point-data__h2_bg"></div>
+                            <div class="truncate">Dispenseries</div>
                             <div class="point-data__h2_bg _2"></div>
                           </a>
                         </div>
@@ -1637,39 +1582,13 @@
                           <a href="#" class="point-data__h2 active-3 w-inline-block">
                             <div class="point-data__h2_tree-line-h"></div>
                             <div class="truncate">High schools</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="0593b330-8122-b2a2-ff5d-97887d907164" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
-                            <div class="point-data__h2_bg _3"></div>
-                          </a>
-                        </div>
-                        <div class="point-data__h2_wrapper">
-                          <a href="#" class="point-data__h2 w-inline-block">
-                            <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Primary schools</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="0593b330-8122-b2a2-ff5d-97887d90716c" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="1.5" class="icon-lottie--checkbox"></div>
-                            </div>
-                            <div class="point-data__h2_bg _3"></div>
-                          </a>
-                        </div>
-                        <div class="point-data__h2_wrapper">
-                          <a href="#" class="point-data__h2 w-inline-block">
-                            <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Technical college</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="0593b330-8122-b2a2-ff5d-97887d907174" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
                             <div class="point-data__h2_bg _3"></div>
                           </a>
                         </div>
                         <div class="point-data__h2_wrapper">
                           <a href="#" class="point-data__h2 last w-inline-block">
                             <div class="point-data__h2_tree-line-h"></div>
-                            <div class="truncate">Universities</div>
-                            <div class="point-data__checkbox">
-                              <div data-w-id="0593b330-8122-b2a2-ff5d-97887d90717c" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5ddce16f2111933b6c1205a5/5e1d4d935caa271b0f4c2b62_lottieflow-checkbox-02-000000-easey.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="icon-lottie--checkbox"></div>
-                            </div>
+                            <div class="truncate">Primary schools</div>
                             <div class="point-data__h2_bg _3"></div>
                           </a>
                         </div>
@@ -1728,7 +1647,7 @@
   <!--  Used for the autocomplete search box  -->
   <link href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
-  <link rel="stylesheet" href="css/wazimap-ng.css">
+  <link rel="stylesheet" href="https://openup.org.za/wazimap-ng-ui/wazimap-ng.css">
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
   <!--  used the the autocomplete search box  -->
   <script crossorigin="anonymous" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
@@ -1741,7 +1660,7 @@
       });
     </script>
   <script src="js/index.js"></script>
-  <script>
+  
       setTimeout(function() {
         $('.w-webflow-badge').css({
           'display': 'none !important'
