Added missing script tag

--- a/src/index.html
+++ b/src/index.html
@@ -1660,6 +1660,7 @@
       });
     </script>
   <script src="js/index.js"></script>
+  <script>
   
       setTimeout(function() {
         $('.w-webflow-badge').css({
