Updated js entry point

--- a/src/index.html
+++ b/src/index.html
@@ -3317,7 +3317,7 @@
         }
       });
     </script>
-  <script src="https://openup.org.za/wazimap-ng-ui/wazimap-ng.js"></script>
+  <script src="js/index.js"></script>
   <script>
       setTimeout(function() {
         $('.w-webflow-badge').css({
