Added missing heights for svg icons

--- a/src/index.html
+++ b/src/index.html
@@ -381,7 +381,7 @@
 </svg></div>
         </div>
         <div class="styles__icon-wrapper">
-          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
         </div>
@@ -486,7 +486,7 @@
 </svg></div>
               </div>
               <div class="point-marker__pin">
-                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
                 <div class="point-marker__shadow"></div>
@@ -535,7 +535,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -548,7 +548,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -561,7 +561,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -574,7 +574,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -587,7 +587,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -600,7 +600,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -613,7 +613,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -626,7 +626,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -639,7 +639,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -652,7 +652,7 @@
 </svg></div>
             </div>
             <div class="point-marker__pin">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
               <div class="point-marker__shadow"></div>
@@ -2604,7 +2604,7 @@
 </svg></div>
                 </div>
                 <div class="point-marker__pin">
-                  <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="" viewbox="0 0 24 29	">
+                  <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewbox="0 0 24 29	">
 <path d="M0 0h24v24H0z" fill="none"></path><path stroke="white" fill="currentColor" d="M24,12A12,12,0,1,0,3.64,20.6h0L12,29l8.39-8.39h0A12,12,0,0,0,24,12Z"></path>
 </svg></div>
                   <div class="point-marker__shadow"></div>
