fixing chart design tweeks

--- a/src/boilerplate/components.html
+++ b/src/boilerplate/components.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Feb 18 2020 06:44:10 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Feb 26 2020 08:11:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e3007159d703b3fc5c43dc2" data-wf-site="5ddce16f2111933b6c1205a5">
 <head>
   <meta charset="utf-8">
@@ -305,6 +305,11 @@
       </div>
       <div class="styles__icon-wrapper">
         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"></path>
+</svg></div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
 </svg></div>
       </div>
@@ -366,6 +371,18 @@
           <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="34" viewbox="0 0 28 34	"><defs><style>.cls-1{fill:none;}.cls-2{fill:currentColor;}.cls-3{fill:#fff;}</style></defs><rect class="cls-1" width="28" height="34"></rect><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1-2"><path class="cls-2" d="M5.11,23.63a12.73,12.73,0,1,1,17.8,0L14,32.57Z"></path><path class="cls-3" d="M14,2.5h0a12,12,0,0,1,8.38,20.61L14,31.5,5.64,23.1A12,12,0,0,1,14,2.5M14,1h0A13.5,13.5,0,0,0,4.59,24.18l8.35,8.38L14,33.63l1.06-1.06,8.39-8.39A13.53,13.53,0,0,0,14,1Z"></path></g></g></svg></div>
         </div>
       </div>
+    </div>
+    <div class="styles__icon-colours">
+      <div class="_1"></div>
+      <div class="_2"></div>
+      <div class="_3"></div>
+      <div class="_4"></div>
+      <div class="_5"></div>
+      <div class="_6"></div>
+      <div class="_7"></div>
+      <div class="_8"></div>
+      <div class="_9"></div>
+      <div class="_10"></div>
     </div>
     <div class="styles__colours">
       <div class="styles__title">
@@ -431,6 +448,36 @@
           <div class="teal--secondary"></div>
         </div>
       </div>
+      <div class="styles__colour-wrapper">
+        <div class="map__cluster-wrapper">
+          <div class="map-cluster--1"></div>
+          <div class="map-cluster--1-hover"></div>
+        </div>
+      </div>
+      <div class="styles__colour-wrapper">
+        <div class="map__cluster-wrapper">
+          <div class="map-cluster--2"></div>
+          <div class="map-cluster--2-hover"></div>
+        </div>
+      </div>
+      <div class="styles__colour-wrapper">
+        <div class="map__cluster-wrapper">
+          <div class="map-cluster--3"></div>
+          <div class="map-cluster--3-hover"></div>
+        </div>
+      </div>
+      <div class="styles__colour-wrapper">
+        <div class="map__cluster-wrapper">
+          <div class="map-cluster--4"></div>
+          <div class="map-cluster--4-hover"></div>
+        </div>
+      </div>
+      <div class="styles__colour-wrapper">
+        <div class="map__cluster-wrapper">
+          <div class="map-cluster--5"></div>
+          <div class="map-cluster--5-hover"></div>
+        </div>
+      </div>
     </div>
     <div class="styles__map-tooltips">
       <div class="styles__title">
@@ -446,51 +493,50 @@
           </div>
           <div class="map__tooltip_value">
             <div class="tooltip__value_label">
-              <div class="truncate">10-19:</div>
+              <div>Language most spoken at home (Afrikaans):</div>
             </div>
             <div class="tooltip__value_amount">
-              <div class="truncate">24,539</div>
+              <div>24,539</div>
             </div>
             <div class="tooltip__value_detail">
-              <div class="truncate">(24%)</div>
+              <div>(24%)</div>
+            </div>
+          </div>
+          <div class="map__tooltip_points">
+            <div class="tooltip__point_item">
+              <div class="tooltip__points_label">
+                <div>Higher Education:</div>
+              </div>
+              <div class="tooltip__value_amount">
+                <div>2,102</div>
+              </div>
+            </div>
+            <div class="tooltip__point_item">
+              <div class="tooltip__points_label">
+                <div>Basic Education:</div>
+              </div>
+              <div class="tooltip__value_amount">
+                <div>1,183</div>
+              </div>
+            </div>
+            <div class="tooltip__point_item">
+              <div class="tooltip__points_label">
+                <div>Pharmacies:</div>
+              </div>
+              <div class="tooltip__value_amount">
+                <div>301</div>
+              </div>
+            </div>
+            <div class="tooltip__point_item last">
+              <div class="tooltip__points_label">
+                <div>BRT Bus Routes:</div>
+              </div>
+              <div class="tooltip__value_amount">
+                <div>12</div>
+              </div>
             </div>
           </div>
           <div class="map-tooltip__notch"></div>
-        </div>
-      </div>
-      <div class="styles__map-tooltips_wrapper">
-        <div class="map_point-marker">
-          <div class="point-marker">
-            <div class="point-marker__icon">
-              <div class="icon--education">
-                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
-<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
-</svg></div>
-              </div>
-            </div>
-            <div class="point-marker__pin">
-              <div class="icon--blank-pin">
-                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="34" viewbox="0 0 28 34"><defs><style>.cls-1{fill:none;}.cls-2{fill:currentColor;}.cls-3{fill:#fff;}</style></defs><rect class="cls-1" width="28" height="34"></rect><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1-2"><path class="cls-2" d="M5.11,23.63a12.73,12.73,0,1,1,17.8,0L14,32.57Z"></path><path class="cls-3" d="M14,2.5h0a12,12,0,0,1,8.38,20.61L14,31.5,5.64,23.1A12,12,0,0,1,14,2.5M14,1h0A13.5,13.5,0,0,0,4.59,24.18l8.35,8.38L14,33.63l1.06-1.06,8.39-8.39A13.53,13.53,0,0,0,14,1Z"></path></g></g></svg></div>
-              </div>
-              <div class="point-marker__shadow"></div>
-            </div>
-          </div>
-          <div class="point-marker__tooltip show">
-            <div class="point-marker__tooltip_card">
-              <div class="tooltip__card_title">
-                <div>Location name goes here</div>
-              </div>
-              <div class="tooltip__card_subtitle">
-                <div>Location type goes here</div>
-              </div>
-              <div class="tooltip__card_close">
-                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
-</svg></div>
-              </div>
-            </div>
-            <div class="point-marker__tooltip_notch"></div>
-          </div>
         </div>
       </div>
       <div class="styles__map-tooltips_wrapper">
@@ -689,6 +735,70 @@
           </div>
           <div class="map-cluster__pie"><img src="../images/map-pie-chart.svg" alt=""></div>
           <div class="map-cluster__notch"></div>
+        </div>
+      </div>
+      <div class="styles__map-tooltips_wrapper">
+        <div class="styles__map_point-clusters">
+          <div class="styles__map_point-cluster">
+            <div class="map__point-cluster _1">
+              <div>1,700</div>
+            </div>
+          </div>
+          <div class="styles__map_point-cluster">
+            <div class="map__point-cluster _2">
+              <div>1,700</div>
+            </div>
+          </div>
+          <div class="styles__map_point-cluster">
+            <div class="map__point-cluster _3">
+              <div>1,700</div>
+            </div>
+          </div>
+          <div class="styles__map_point-cluster">
+            <div class="map__point-cluster _4">
+              <div>1,700</div>
+            </div>
+          </div>
+          <div class="styles__map_point-cluster">
+            <div class="map__point-cluster _5">
+              <div>1,700</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="styles__map-tooltips_wrapper">
+        <div class="map_point-marker">
+          <div class="point-marker">
+            <div class="point-marker__icon">
+              <div class="icon--education">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
+</svg></div>
+              </div>
+            </div>
+            <div class="point-marker__pin">
+              <div class="icon--blank-pin">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="34" viewbox="0 0 28 34"><defs><style>.cls-1{fill:none;}.cls-2{fill:currentColor;}.cls-3{fill:#fff;}</style></defs><rect class="cls-1" width="28" height="34"></rect><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1-2"><path class="cls-2" d="M5.11,23.63a12.73,12.73,0,1,1,17.8,0L14,32.57Z"></path><path class="cls-3" d="M14,2.5h0a12,12,0,0,1,8.38,20.61L14,31.5,5.64,23.1A12,12,0,0,1,14,2.5M14,1h0A13.5,13.5,0,0,0,4.59,24.18l8.35,8.38L14,33.63l1.06-1.06,8.39-8.39A13.53,13.53,0,0,0,14,1Z"></path></g></g></svg></div>
+              </div>
+              <div class="point-marker__shadow"></div>
+            </div>
+          </div>
+          <div class="point-marker__tooltip show">
+            <div class="point-marker__tooltip_card">
+              <div class="tooltip__card_title">
+                <div>Location name goes here</div>
+              </div>
+              <div class="tooltip__card_subtitle">
+                <div>Location type goes here</div>
+              </div>
+              <div class="tooltip__card_close">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+</svg></div>
+              </div>
+            </div>
+            <div class="point-marker__tooltip_notch"></div>
+          </div>
         </div>
       </div>
     </div>
