--- a/src/401.html
+++ b/src/401.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jan 17 2020 05:59:01 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5ddce16f211193d1441205ac" data-wf-site="5ddce16f2111933b6c1205a5">
+<!--  Last Published: Wed Feb 26 2020 08:11:40 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5e3007159d703bb046c43dc0" data-wf-site="5ddce16f2111933b6c1205a5">
 <head>
   <meta charset="utf-8">
   <title>Protected page</title>
@@ -54,5 +54,56 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <style>
+      /*-------- Custom slider checkbox */
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 32px;
+        height: 20px;
+      }
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #00000030;
+        -webkit-transition: .1s;
+        transition: .1s;
+      }
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 12px;
+        width: 12px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .1s;
+        transition: .1s;
+      }
+      input:checked+.slider {
+        background-color: #3c3c3c;
+      }
+      input:checked+.slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(12px);
+        transform: translateX(12px);
+      }
+      /* Rounded sliders */
+      .slider.round {
+        border-radius: 34px;
+      }
+      .slider.round:before {
+        border-radius: 50%;
+      }
+    </style>
 </body>
 </html>
