--- a/src/boilerplate/components.html
+++ b/src/boilerplate/components.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 26 2020 08:11:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Mar 26 2020 10:53:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e3007159d703b3fc5c43dc2" data-wf-site="5ddce16f2111933b6c1205a5">
 <head>
   <meta charset="utf-8">
@@ -223,10 +223,99 @@
         </div>
       </div>
       <div class="styles__icon-wrapper">
+        <div class="icon--transport">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M21.41 11.58l-9-9C12.05 2.22 11.55 2 11 2H4c-1.1 0-2 .9-2 2v7c0 .55.22 1.05.59 1.42l9 9c.36.36.86.58 1.41.58.55 0 1.05-.22 1.41-.59l7-7c.37-.36.59-.86.59-1.41 0-.55-.23-1.06-.59-1.42zM5.5 7C4.67 7 4 6.33 4 5.5S4.67 4 5.5 4 7 4.67 7 5.5 6.33 7 5.5 7z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--windmill">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M12 12c0-3 2.5-5.5 5.5-5.5S23 9 23 12H12zm0 0c0 3-2.5 5.5-5.5 5.5S1 15 1 12h11zm0 0c-3 0-5.5-2.5-5.5-5.5S9 1 12 1v11zm0 0c3 0 5.5 2.5 5.5 5.5S15 23 12 23V12z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--torch">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M6,14l3,3v5h6v-5l3-3V9H6V14z M11,2h2v3h-2V2z M3.5,5.88l1.41-1.41l2.12,2.12L5.62,8L3.5,5.88z M16.96,6.59l2.12-2.12 l1.41,1.41L18.38,8L16.96,6.59z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--waves">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M17 16.99c-1.35 0-2.2.42-2.95.8-.65.33-1.18.6-2.05.6-.9 0-1.4-.25-2.05-.6-.75-.38-1.57-.8-2.95-.8s-2.2.42-2.95.8c-.65.33-1.17.6-2.05.6v1.95c1.35 0 2.2-.42 2.95-.8.65-.33 1.17-.6 2.05-.6s1.4.25 2.05.6c.75.38 1.57.8 2.95.8s2.2-.42 2.95-.8c.65-.33 1.18-.6 2.05-.6.9 0 1.4.25 2.05.6.75.38 1.58.8 2.95.8v-1.95c-.9 0-1.4-.25-2.05-.6-.75-.38-1.6-.8-2.95-.8zm0-4.45c-1.35 0-2.2.43-2.95.8-.65.32-1.18.6-2.05.6-.9 0-1.4-.25-2.05-.6-.75-.38-1.57-.8-2.95-.8s-2.2.43-2.95.8c-.65.32-1.17.6-2.05.6v1.95c1.35 0 2.2-.43 2.95-.8.65-.35 1.15-.6 2.05-.6s1.4.25 2.05.6c.75.38 1.57.8 2.95.8s2.2-.43 2.95-.8c.65-.35 1.15-.6 2.05-.6s1.4.25 2.05.6c.75.38 1.58.8 2.95.8v-1.95c-.9 0-1.4-.25-2.05-.6-.75-.38-1.6-.8-2.95-.8zm2.95-8.08c-.75-.38-1.58-.8-2.95-.8s-2.2.42-2.95.8c-.65.32-1.18.6-2.05.6-.9 0-1.4-.25-2.05-.6-.75-.37-1.57-.8-2.95-.8s-2.2.42-2.95.8c-.65.33-1.17.6-2.05.6v1.93c1.35 0 2.2-.43 2.95-.8.65-.33 1.17-.6 2.05-.6s1.4.25 2.05.6c.75.38 1.57.8 2.95.8s2.2-.43 2.95-.8c.65-.32 1.18-.6 2.05-.6.9 0 1.4.25 2.05.6.75.38 1.58.8 2.95.8V5.04c-.9 0-1.4-.25-2.05-.58zM17 8.09c-1.35 0-2.2.43-2.95.8-.65.35-1.15.6-2.05.6s-1.4-.25-2.05-.6c-.75-.38-1.57-.8-2.95-.8s-2.2.43-2.95.8c-.65.35-1.15.6-2.05.6v1.95c1.35 0 2.2-.43 2.95-.8.65-.32 1.18-.6 2.05-.6s1.4.25 2.05.6c.75.38 1.57.8 2.95.8s2.2-.43 2.95-.8c.65-.32 1.18-.6 2.05-.6.9 0 1.4.25 2.05.6.75.38 1.58.8 2.95.8V9.49c-.9 0-1.4-.25-2.05-.6-.75-.38-1.6-.8-2.95-.8z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--briefcase">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M10 16v-1H3.01L3 19c0 1.11.89 2 2 2h14c1.11 0 2-.89 2-2v-4h-7v1h-4zm10-9h-4.01V5l-2-2h-4l-2 2v2H4c-1.1 0-2 .9-2 2v3c0 1.11.89 2 2 2h6v-2h4v2h6c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2zm-6 0h-4V5h4v2z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--book">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path>
+<g><rect fill="none" height="24" width="24"></rect></g>
+<g><path fill="currentColor" d="M21,5c-1.11-0.35-2.33-0.5-3.5-0.5c-1.95,0-4.05,0.4-5.5,1.5c-1.45-1.1-3.55-1.5-5.5-1.5S2.45,4.9,1,6v14.65 c0,0.25,0.25,0.5,0.5,0.5c0.1,0,0.15-0.05,0.25-0.05C3.1,20.45,5.05,20,6.5,20c1.95,0,4.05,0.4,5.5,1.5c1.35-0.85,3.8-1.5,5.5-1.5 c1.65,0,3.35,0.3,4.75,1.05c0.1,0.05,0.15,0.05,0.25,0.05c0.25,0,0.5-0.25,0.5-0.5V6C22.4,5.55,21.75,5.25,21,5z M21,18.5 c-1.1-0.35-2.3-0.5-3.5-0.5c-1.7,0-4.15,0.65-5.5,1.5V8c1.35-0.85,3.8-1.5,5.5-1.5c1.2,0,2.4,0.15,3.5,0.5V18.5z"></path><g><path fill="currentColor" d="M17.5,10.5c0.88,0,1.73,0.09,2.5,0.26V9.24C19.21,9.09,18.36,9,17.5,9c-1.7,0-3.24,0.29-4.5,0.83v1.66 C14.13,10.85,15.7,10.5,17.5,10.5z"></path><path fill="currentColor" d="M13,12.49v1.66c1.13-0.64,2.7-0.99,4.5-0.99c0.88,0,1.73,0.09,2.5,0.26V11.9c-0.79-0.15-1.64-0.24-2.5-0.24 C15.8,11.66,14.26,11.96,13,12.49z"></path><path fill="currentColor" d="M17.5,14.33c-1.7,0-3.24,0.29-4.5,0.83v1.66c1.13-0.64,2.7-0.99,4.5-0.99c0.88,0,1.73,0.09,2.5,0.26v-1.52 C19.21,14.41,18.36,14.33,17.5,14.33z"></path></g></g>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--park">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M22.17 9.17c0-3.87-3.13-7-7-7s-7 3.13-7 7c0 3.47 2.52 6.34 5.83 6.89V20H6v-3h1v-4c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v4h1v5h16v-2h-3v-3.88c3.47-.41 6.17-3.36 6.17-6.95zM4.5 11c.83 0 1.5-.67 1.5-1.5S5.33 8 4.5 8 3 8.67 3 9.5 3.67 11 4.5 11z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--buildings">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--tennis">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" width="100%" height="" viewbox="0 0 24 24">
+<g><rect fill="none" height="24" width="24"></rect></g>
+<g><path fill="currentColor" d="M19.52,2.49c-2.34-2.34-6.62-1.87-9.55,1.06c-1.6,1.6-2.52,3.87-2.54,5.46c-0.02,1.58,0.26,3.89-1.35,5.5l-4.24,4.24 l1.42,1.42l4.24-4.24c1.61-1.61,3.92-1.33,5.5-1.35s3.86-0.94,5.46-2.54C21.38,9.11,21.86,4.83,19.52,2.49z M10.32,11.68 c-1.53-1.53-1.05-4.61,1.06-6.72s5.18-2.59,6.72-1.06c1.53,1.53,1.05,4.61-1.06,6.72S11.86,13.21,10.32,11.68z"></path>
+<path fill="currentColor" d="M18,17c0.53,0,1.04,0.21,1.41,0.59c0.78,0.78,0.78,2.05,0,2.83C19.04,20.79,18.53,21,18,21s-1.04-0.21-1.41-0.59 c-0.78-0.78-0.78-2.05,0-2.83C16.96,17.21,17.47,17,18,17 M18,15c-1.02,0-2.05,0.39-2.83,1.17c-1.56,1.56-1.56,4.09,0,5.66 C15.95,22.61,16.98,23,18,23s2.05-0.39,2.83-1.17c1.56-1.56,1.56-4.09,0-5.66C20.05,15.39,19.02,15,18,15L18,15z"></path></g>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--pool">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><circle fill="currentColor" cx="16.5" cy="5.5" r="2.5"></circle><path fill="currentColor" d="M22 21c-1.11 0-1.73-.37-2.18-.64-.37-.22-.6-.36-1.15-.36-.56 0-.78.13-1.15.36-.46.27-1.07.64-2.18.64s-1.73-.37-2.18-.64c-.37-.22-.6-.36-1.15-.36-.56 0-.78.13-1.15.36-.46.27-1.08.64-2.19.64-1.11 0-1.73-.37-2.18-.64-.37-.23-.6-.36-1.15-.36s-.78.13-1.15.36c-.46.27-1.08.64-2.19.64v-2c.56 0 .78-.13 1.15-.36.46-.27 1.08-.64 2.19-.64s1.73.37 2.18.64c.37.23.59.36 1.15.36.56 0 .78-.13 1.15-.36.46-.27 1.08-.64 2.19-.64 1.11 0 1.73.37 2.18.64.37.22.6.36 1.15.36s.78-.13 1.15-.36c.45-.27 1.07-.64 2.18-.64s1.73.37 2.18.64c.37.23.59.36 1.15.36v2zm0-4.5c-1.11 0-1.73-.37-2.18-.64-.37-.22-.6-.36-1.15-.36-.56 0-.78.13-1.15.36-.45.27-1.07.64-2.18.64s-1.73-.37-2.18-.64c-.37-.22-.6-.36-1.15-.36-.56 0-.78.13-1.15.36-.45.27-1.07.64-2.18.64s-1.73-.37-2.18-.64c-.37-.22-.6-.36-1.15-.36s-.78.13-1.15.36c-.47.27-1.09.64-2.2.64v-2c.56 0 .78-.13 1.15-.36.45-.27 1.07-.64 2.18-.64s1.73.37 2.18.64c.37.22.6.36 1.15.36.56 0 .78-.13 1.15-.36.45-.27 1.07-.64 2.18-.64s1.73.37 2.18.64c.37.22.6.36 1.15.36s.78-.13 1.15-.36c.45-.27 1.07-.64 2.18-.64s1.73.37 2.18.64c.37.22.6.36 1.15.36v2zM8.67 12c.56 0 .78-.13 1.15-.36.46-.27 1.08-.64 2.19-.64 1.11 0 1.73.37 2.18.64.37.22.6.36 1.15.36s.78-.13 1.15-.36c.12-.07.26-.15.41-.23L10.48 5C8.93 3.45 7.5 2.99 5 3v2.5c1.82-.01 2.89.39 4 1.5l1 1-3.25 3.25c.31.12.56.27.77.39.37.23.59.36 1.15.36z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--flag">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" enable-background="new 0 0 24 24" viewbox="0 0 24 24">
+<g><rect fill="none" height="24" width="24"></rect></g>
+<g><g><path fill="currentColor" d="M14,9l-1-2H7V5.72C7.6,5.38,8,4.74,8,4c0-1.1-0.9-2-2-2S4,2.9,4,4c0,0.74,0.4,1.38,1,1.72V21h2v-4h5l1,2h7V9H14z M18,17h-4 l-1-2H7V9h5l1,2h5V17z"></path></g>
+</g></svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
         <div class="icon--menu">
           <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path>
 <path fill="currentColor" d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+</svg></div>
+        </div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="icon--error">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"></path>
 </svg></div>
         </div>
       </div>
@@ -309,9 +398,11 @@
 </svg></div>
       </div>
       <div class="styles__icon-wrapper">
-        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+        <div class="icon--close">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
 </svg></div>
+        </div>
       </div>
       <div class="styles__icon-wrapper">
         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
@@ -324,18 +415,27 @@
 </svg></div>
       </div>
       <div class="styles__icon-wrapper">
-        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+        <div class="icon--dropdown">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M7 10l5 5 5-5z"></path>
 </svg></div>
+        </div>
       </div>
       <div class="styles__icon-wrapper">
-        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+        <div class="icon--dropdownup">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M17,14l-5-5l-5,5H17z"></path>
 </svg></div>
+        </div>
       </div>
       <div class="styles__icon-wrapper">
         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+</svg></div>
+      </div>
+      <div class="styles__icon-wrapper">
+        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"></path>
 </svg></div>
       </div>
       <div class="styles__icon-wrapper">
@@ -486,10 +586,10 @@
       <div class="styles__map-tooltips_wrapper">
         <div class="content__map_tooltip">
           <div class="map__tooltip_geography-chip">
-            <div>Ward</div>
+            <div>MUNICIPALITY</div>
           </div>
           <div class="map__tooltip_name">
-            <div class="text-block">City of Cape Town Ward 23</div>
+            <div class="text-block">Elim</div>
           </div>
           <div class="map__tooltip_value">
             <div class="tooltip__value_label">
@@ -533,6 +633,57 @@
               </div>
               <div class="tooltip__value_amount">
                 <div>12</div>
+              </div>
+            </div>
+          </div>
+          <div class="map-tooltip__notch"></div>
+        </div>
+      </div>
+      <div class="styles__map-tooltips_wrapper">
+        <div class="content__map_facility-tooltip">
+          <div class="map__facility-tooltip_header">
+            <div class="map__facility-tooltip_icon">
+              <div class="icon--education">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
+</svg></div>
+              </div>
+            </div>
+            <div class="map__tooltip-tooltip_name">
+              <div class="text-block">Elim High School</div>
+            </div>
+          </div>
+          <div class="map__facility-tooltip_items">
+            <div class="tooltip__facility_item">
+              <div class="tooltip__facility-item_label">
+                <div>Address:</div>
+              </div>
+              <div class="tooltip__facility-item_value">
+                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquet libero ullamcorper, blandit felis sit amet, rhoncus eros. Nam sed dolor id quam ullamcorper rhoncus.</div>
+              </div>
+            </div>
+            <div class="tooltip__facility_item">
+              <div class="tooltip__facility-item_label">
+                <div>Phone:</div>
+              </div>
+              <div class="tooltip__facility-item_value">
+                <div>09123901293</div>
+              </div>
+            </div>
+            <div class="tooltip__facility_item">
+              <div class="tooltip__facility-item_label">
+                <div>Website:</div>
+              </div>
+              <div class="tooltip__facility-item_value">
+                <div><a href="#">www.test.com</a></div>
+              </div>
+            </div>
+            <div class="tooltip__facility_item last">
+              <div class="tooltip__facility-item_label">
+                <div>Email:</div>
+              </div>
+              <div class="tooltip__facility-item_value">
+                <div><a target="_blank" href="mailto:appletreenat@gmail.com">appletreenat@gmail.com</a></div>
               </div>
             </div>
           </div>
@@ -1014,7 +1165,7 @@
             <div class="point-data__h1_trigger _4 active-4">
               <div class="point-data__h1_header">
                 <div class="point-data__h1_trigger-icon">
-                  <div class="icon--transport">
+                  <div class="icon--buildings">
                     <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M4 16c0 .88.39 1.67 1 2.22V20c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h8v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1.78c.61-.55 1-1.34 1-2.22V6c0-3.5-3.58-4-8-4s-8 .5-8 4v10zm3.5 1c-.83 0-1.5-.67-1.5-1.5S6.67 14 7.5 14s1.5.67 1.5 1.5S8.33 17 7.5 17zm9 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm1.5-6H6V6h12v5z"></path>
 </svg></div>
@@ -1822,7 +1973,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ddce16f2111933b6c1205a5" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <style>
