--- a/src/boilerplate/styles.html
+++ b/src/boilerplate/styles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 26 2020 08:11:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Mar 26 2020 10:53:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e3007159d703b5011c43dbf" data-wf-site="5ddce16f2111933b6c1205a5">
 <head>
   <meta charset="utf-8">
@@ -243,7 +243,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ddce16f2111933b6c1205a5" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <style>
